--- a/index.html
+++ b/index.html
@@ -22,26 +22,41 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident modi atque exercitationem minima unde
                 dolor quaerat! Dolorum dolore in, dolor iure odio, sunt eligendi nobis odit quae possimus officia
                 voluptate?</p>
-               <div class="mediumcontainer clearfix">
-                    <div class="minicontainer">
-                        <img src="imgs/male1.png" alt="">
-                    <div class="minicontainer">
-                        <img src="imgs/female1.png" alt="">
-                    <div class="minicontainer">
-                        <img src="imgs/male2.png" alt="">
+            <div class="row clearfix">
+                <div class="column">
+                    <img src="imgs/male1.png" alt="card1">
+                </div>
+                <div class="column">
+                    <img src="imgs/female1.png" alt="card2">
+                </div>
+                <div class="column">
+                    <img src="imgs/male2.png" alt="card3">
+                </div>
+            </div>
+
+            <div class="row clearfix">
+                <div class="column">
+                    <img src="imgs/female2.png" alt="card1">
+                </div>
+                <div class="column">
+                    <img src="imgs/male3.png" alt="card2">
+                </div>
+                <div class="column">
+                    <img src="imgs/female3.png" alt="card3">
+                </div>
+            </div>
 
 
 
 
-
-                        <!--<img src="imgs/male1.png" alt="">
+            <!--<img src="imgs/male1.png" alt="">
                         <h4>Marco bianchi</h4>
                         <div>Designer</div>
                         <div>marcobianchi@team.com</div>-->
-                    </div>
-               </div>
+        </div>
+        </div>
 
-            
+
     </main>
     <footer></footer>
 
@@ -49,7 +64,7 @@
 
 </html>
 
-            <!--<div class="row clearfix">
+<!--<div class="row clearfix">
                 <div class="col">
                     <div style="background-color: red;">
                         <img src="imgs/male1.png" alt="">
