--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
             <div class="row clearfix">
                 <div class="column">
                     <img src="imgs/male1.png" alt="card1">
+                    <h4>Marco bianchi</h4>
+                    <div class="text">Designer</div>
+                    <div class="text">marcobianchi@team.com</div>
                 </div>
                 <div class="column">
                     <img src="imgs/female1.png" alt="card2">
@@ -34,7 +37,7 @@
                 </div>
             </div>
 
-            <div class="row clearfix">
+            <div class="last row clearfix">
                 <div class="column">
                     <img src="imgs/female2.png" alt="card1">
                 </div>
