--- a/index.html
+++ b/index.html
@@ -26,26 +26,41 @@
                 <div class="column">
                     <img src="imgs/male1.png" alt="card1">
                     <h4>Marco bianchi</h4>
-                    <div class="text">Designer</div>
-                    <div class="text">marcobianchi@team.com</div>
+                    <div>Designer</div>
+                    <div><a href="#">marcobianchi@team.com</a></div>
                 </div>
-                <div class="column">
+                <div class="column mid">
                     <img src="imgs/female1.png" alt="card2">
+                    <h4>Laura Rossi</h4>
+                    <div>Front-end Developer</div>
+                    <div><a href="#">laurarossi@team.com</a></div>
                 </div>
                 <div class="column">
                     <img src="imgs/male2.png" alt="card3">
+                    <h4>Giorgio Verdi</h4>
+                    <div class="text">Back-end Developer<</div>
+                    <div><a href="#">giorgioverdi@team.com</a></div>
                 </div>
             </div>
 
             <div class="last row clearfix">
                 <div class="column">
-                    <img src="imgs/female2.png" alt="card1">
+                    <img src="imgs/female2.png" alt="card4">
+                    <h4>Marta ipsum</h4>
+                    <div class="text">SEO Specialist</div>
+                    <div><a href="#">laurarossi@team.com</a></div>
+                </div>
+                <div class="column mid">
+                    <img src="imgs/male3.png" alt="card5">
+                    <h4>Roberto Lorem</h4>
+                    <div>Project Manager</div>
+                    <div><a href="#">robertolorem@team.com</a></div>
                 </div>
                 <div class="column">
-                    <img src="imgs/male3.png" alt="card2">
-                </div>
-                <div class="column">
-                    <img src="imgs/female3.png" alt="card3">
+                    <img src="imgs/female3.png" alt="card6">
+                    <h4>Daniela Amet</h4>
+                    <div>Analyst</div>
+                    <div><a href="#">danielaamet@team.com</a></div>
                 </div>
             </div>
 
