--- a/index.html
+++ b/index.html
@@ -25,20 +25,20 @@
             <div class="row clearfix">
                 <div class="column">
                     <img src="imgs/male1.png" alt="card1">
-                    <h4>Marco bianchi</h4>
+                    <h4>MARCO BIANCHI</h4>
                     <div>Designer</div>
                     <div><a href="#">marcobianchi@team.com</a></div>
                 </div>
                 <div class="column mid">
                     <img src="imgs/female1.png" alt="card2">
-                    <h4>Laura Rossi</h4>
+                    <h4>LAURA ROSSI</h4>
                     <div>Front-end Developer</div>
                     <div><a href="#">laurarossi@team.com</a></div>
                 </div>
                 <div class="column">
                     <img src="imgs/male2.png" alt="card3">
-                    <h4>Giorgio Verdi</h4>
-                    <div class="text">Back-end Developer<</div>
+                    <h4>GIORGIO VERDI</h4>
+                    <div class="text">Back-end Developer</div>
                     <div><a href="#">giorgioverdi@team.com</a></div>
                 </div>
             </div>
@@ -46,19 +46,19 @@
             <div class="last row clearfix">
                 <div class="column">
                     <img src="imgs/female2.png" alt="card4">
-                    <h4>Marta ipsum</h4>
+                    <h4>MARTA IPSUM</h4>
                     <div class="text">SEO Specialist</div>
                     <div><a href="#">laurarossi@team.com</a></div>
                 </div>
                 <div class="column mid">
                     <img src="imgs/male3.png" alt="card5">
-                    <h4>Roberto Lorem</h4>
+                    <h4>ROBERTO LOREM</h4>
                     <div>Project Manager</div>
                     <div><a href="#">robertolorem@team.com</a></div>
                 </div>
                 <div class="column">
                     <img src="imgs/female3.png" alt="card6">
-                    <h4>Daniela Amet</h4>
+                    <h4>DANIELA AMET</h4>
                     <div>Analyst</div>
                     <div><a href="#">danielaamet@team.com</a></div>
                 </div>
