--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 <body>
 
     <header>
-        <h1>Meet our team</h1>
-        </div>
+        <h1>Meet Our Team</h1>
     </header>
 
     <main>
@@ -58,22 +57,12 @@
                 </div>
                 <div class="column">
                     <img src="imgs/female3.png" alt="card6">
-                    <h4>DANIELA AMET</h4>
+                    <h4>DANIELA AMET</h4><br>
                     <div>Analyst</div>
                     <div><a href="#">danielaamet@team.com</a></div>
                 </div>
             </div>
-
-
-
-
-            <!--<img src="imgs/male1.png" alt="">
-                        <h4>Marco bianchi</h4>
-                        <div>Designer</div>
-                        <div>marcobianchi@team.com</div>-->
         </div>
-        </div>
-
 
     </main>
     <footer></footer>
@@ -81,33 +70,3 @@
 </body>
 
 </html>
-
-<!--<div class="row clearfix">
-                <div class="col">
-                    <div style="background-color: red;">
-                        <img src="imgs/male1.png" alt="">
-                        <h2>Col 1</h2>
-                    </div>
-                </div>
-                <div class="col">
-                    <img src="imgs/female1.png" alt="">
-                    <h2>Col 2</h2>
-                </div>
-                <div class="col">
-                    <img src="imgs/male2.png" alt="">
-                    <h2>Col 1</h2>
-                </div>
-                <div class="col">
-                    <img src="imgs/female2.png" alt="">
-                    <h2>Col 2</h2>
-                </div>
-                <div class="col">
-                    <img src="imgs/male3.png" alt="">
-                    <h2>Col 2</h2>
-                </div>
-                <div class="col">
-                    <img src="imgs/female3.png" alt="">
-                    <h2>Col 2</h2>
-                </div>
-            </div>
-        </div>-->
