Added .testo class and fixed minor problems

--- a/index.html
+++ b/index.html
@@ -13,57 +13,73 @@
 <body>
 
     <header>
-        <h1>Meet Our Team</h1>
+        <div class="main-container text-center">
+            <h1>Meet Our Team</h1>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident modi atque exercitationem minima unde
+                dolor quaerat! Dolorum dolore in, dolor iure odio, sunt eligendi nobis odit quae possimus officia
+                voluptate?</p>
     </header>
 
     <main>
         <div class="main-container">
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Provident modi atque exercitationem minima unde
-                dolor quaerat! Dolorum dolore in, dolor iure odio, sunt eligendi nobis odit quae possimus officia
-                voluptate?</p>
             <div class="row clearfix">
                 <div class="column">
                     <img src="imgs/male1.png" alt="card1">
-                    <h4>MARCO BIANCHI</h4>
-                    <div>Designer</div>
-                    <div><a href="#">marcobianchi@team.com</a></div>
+                    <div class="testo">
+                        <h4>MARCO BIANCHI</h4>
+                        <div>Designer</div>
+                        <div><a href="#">marcobianchi@team.com</a></div>
+                    </div>
                 </div>
+
                 <div class="column mid">
                     <img src="imgs/female1.png" alt="card2">
-                    <h4>LAURA ROSSI</h4>
-                    <div>Front-end Developer</div>
-                    <div><a href="#">laurarossi@team.com</a></div>
+                    <div class="testo">
+                        <h4>LAURA ROSSI</h4>
+                        <div>Front-end Developer</div>
+                        <div><a href="#">laurarossi@team.com</a></div>
+                    </div>
                 </div>
-                <div class="column">
-                    <img src="imgs/male2.png" alt="card3">
-                    <h4>GIORGIO VERDI</h4>
-                    <div class="text">Back-end Developer</div>
-                    <div><a href="#">giorgioverdi@team.com</a></div>
-                </div>
-            </div>
 
-            <div class="last row clearfix">
-                <div class="column">
-                    <img src="imgs/female2.png" alt="card4">
-                    <h4>MARTA IPSUM</h4>
-                    <div class="text">SEO Specialist</div>
-                    <div><a href="#">laurarossi@team.com</a></div>
-                </div>
-                <div class="column mid">
-                    <img src="imgs/male3.png" alt="card5">
-                    <h4>ROBERTO LOREM</h4>
-                    <div>Project Manager</div>
-                    <div><a href="#">robertolorem@team.com</a></div>
-                </div>
-                <div class="column">
-                    <img src="imgs/female3.png" alt="card6">
-                    <h4>DANIELA AMET</h4><br>
-                    <div>Analyst</div>
-                    <div><a href="#">danielaamet@team.com</a></div>
-                </div>
-            </div>
+                    <div class="column">
+                        <img src="imgs/male2.png" alt="card3">
+                        <div class="testo">
+                            <h4>GIORGIO VERDI</h4>
+                            <div class="text">Back-end Developer</div>
+                            <div><a href="#">giorgioverdi@team.com</a></div>
+                        </div>
+                    </div>
+            </div>       
+
+                    <div class="last row clearfix">
+                        <div class="column">
+                            <img src="imgs/female2.png" alt="card4">
+                            <div class="testo">
+                                <h4>MARTA IPSUM</h4>
+                                <div class="text">SEO Specialist</div>
+                                <div><a href="#">laurarossi@team.com</a></div>
+                            </div>
+                        </div>
+
+                            <div class="column mid">
+                                <img src="imgs/male3.png" alt="card5">
+                                <div class="testo">
+                                    <h4>ROBERTO LOREM</h4>
+                                    <div>Project Manager</div>
+                                    <div><a href="#">robertolorem@team.com</a></div>
+                                </div>
+                            </div>
+
+                            <div class="column">
+                                <img src="imgs/female3.png" alt="card6">
+                                <div class="testo">
+                                    <h4>DANIELA AMET</h4>
+                                    <div>Analyst</div>
+                                    <div><a href="#">danielaamet@team.com</a></div>
+                                </div>                       
+                            </div>
+                    </div>
         </div>
-
     </main>
     <footer></footer>
 
